Introduced new wss framework